<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgroundcolor" >

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <TextView
        android:id="@+id/textViewAccSensitivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/accsettings_acceleroSensitivity"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/medium_small_label_color" />

    <SeekBar
        android:id="@+id/seekBarAccSensitivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewAccSensitivity" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/seekBarAccSensitivity"
        android:text="@string/accsettings_lessSensitive"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/medium_small_label_color" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:text="@string/accsettings_moreSensitive"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/medium_small_label_color" />

    <CheckBox
        android:id="@+id/checkBoxUseAccelerometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/accsettings_useaccelero"
        android:textColor="@color/medium_small_label_color" />

</RelativeLayout>

</ScrollView>
