<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgroundcolor" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewAskWakeUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/askwakeup_askwakeup"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/large_label_color" />

        <Button
            android:id="@+id/buttonWakeUpYes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewAskWakeUp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/my_selector"
            android:onClick="wakeUp"
            android:text="@string/askwakeup_yes"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/buttonWakeUpNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonWakeUpYes"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/my_selector"
            android:onClick="dontWakeUp"
            android:text="@string/askwakeup_no"
            android:textColor="@color/text_color" />
    </RelativeLayout>

</ScrollView>