<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgroundcolor" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/homescreen_goingtosleep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/my_selector"
            android:onClick="startGoingToSleep"
            android:text="@string/homescreen_sleep"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/homescreen_wakingup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/homescreen_goingtosleep"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="160dp"
            android:background="@drawable/my_selector"
            android:onClick="startWakingUp"
            android:text="@string/homescreen_wakeup"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/homescreen_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/homescreen_goingtosleep"
            android:layout_marginRight="10dp"
            android:layout_marginTop="250dp"
            android:background="@drawable/my_selector"
            android:onClick="startResults"
            android:text="@string/homescreen_results"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/homescreen_twitter"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@+id/homescreen_results"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/twitter"
            android:onClick="startTwitter"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/homescreen_facebook"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/homescreen_results"
            android:layout_marginRight="19dp"
            android:background="@drawable/facebook"
            android:onClick="startFacebook"
            android:textColor="@color/text_color" />

    </RelativeLayout>

</ScrollView>